--- a/about/index.html
+++ b/about/index.html
@@ -130,10 +130,10 @@ in a book with the same name. Its premise is that our lives have been improved o
 <p>I was inspired by this book as a software engineer to build my own philosophy for creating technology. This has led me to formalize my tenets which will undergird anything I build. Software I build should:</p>
 <ul>
 <li>Save time and create space in the real (offline) lives of those who I serve, not take away from it.</li>
-<li>Is a means to an end, not an end in and of itself.</li>
-<li>Is utterly transparent in the data it collects and how it is used.</li>
-<li>Does not price-gorge.</li>
-<li>Does not involve online ads.</li>
+<li>Be a means to an end, not an end in and of itself.</li>
+<li>Be utterly transparent in the data it collects and how it is used.</li>
+<li>Not price-gorge.</li>
+<li>Not earn money through online ads.</li>
 </ul>
 </div>
 
